--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 Flask==3.0.3
+groq==0.9.0
+huggingface_hub==0.24.2
 joblib==1.4.2
+openai==1.37.1
 pandas==2.2.2
+Pillow==10.4.0
 pymongo==4.8.0
+Requests==2.32.3
 scikit_learn==1.5.1
+streamlit==1.36.0
